--- a/style.css
+++ b/style.css
@@ -22,16 +22,16 @@
     width: 500px;
     height: 500px;
     padding: 30px;
-    margin-bottom: 650px;
+    margin-bottom: 600px;
 }
-.box{
+#box{
     background-color: green;
     height: 250px;
     width: 250px;
     margin-top: 20px;
 }
 footer{
-    background-color: gray;
+    background-color: rgb(241, 229, 229);
     padding: 20px;
 }
 footer > p{
